[ADD] Custom Auth

--- a/app/.env
+++ b/app/.env
@@ -17,9 +17,9 @@
 APP_ENV=dev
 APP_SECRET=bd2987ad72a12e9d51b394591c396f3b
 ###< symfony/framework-bundle ###
-SECURE_SCHEME=https
-
-ASSET_SECURE=true
+#SECURE_SCHEME=https
+#
+#ASSET_SECURE=true
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
