--- a/docker/nginx_lb/nginx.conf
+++ b/docker/nginx_lb/nginx.conf
@@ -11,9 +11,6 @@ events {
 http {
     resolver 127.0.0.11;
 
-    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -27,6 +24,5 @@ http {
 
     #gzip  on;
 
-    include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-available/*.conf;
 }
