--- a/docker/nginx_lb/sites-available/easyadmintest.conf
+++ b/docker/nginx_lb/sites-available/easyadmintest.conf
@@ -1,10 +1,8 @@
 server {
 
     listen 80;
-    listen 443 ssl http2;
-    # listen [::]:80 default_server ipv6only=on;
 
-    server_name easyadmin.test.local;
+    server_name test_easyadmin.heyliot.local www.test_easyadmin.heyliot.local;
     root /var/www/test_easyadmin/public;
     index index.php;
 
@@ -13,9 +11,8 @@ server {
     }
 
     location ~ \.php$ {
-        set $test_easy_admin_proxy_pass test_easyadmin:9000;
         try_files $uri /index.php =404;
-        fastcgi_pass $test_easy_admin_proxy_pass;
+        fastcgi_pass test_easyadmin:9000;
         fastcgi_index index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
