--- a/docker/nginx_lb/sites-available/easyadmintest.conf
+++ b/docker/nginx_lb/sites-available/easyadmintest.conf
@@ -1,8 +1,9 @@
 server {
 
     listen 80;
+    listen 443 ssl http2;
 
-    server_name test_easyadmin.heyliot.local www.test_easyadmin.heyliot.local;
+    server_name test_easyadmin.local www.test_easyadmin.local;
     root /var/www/test_easyadmin/public;
     index index.php;
 
