--- a/app/.env
+++ b/app/.env
@@ -17,9 +17,9 @@
 APP_ENV=dev
 APP_SECRET=bd2987ad72a12e9d51b394591c396f3b
 ###< symfony/framework-bundle ###
-#SECURE_SCHEME=https
-#
-#ASSET_SECURE=true
+SECURE_SCHEME=https
+
+ASSET_SECURE=true
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
@@ -33,7 +33,3 @@ APP_SECRET=bd2987ad72a12e9d51b394591c396f3b
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
-
-###> sentry/sentry-symfony ###
-SENTRY_DSN=
-###< sentry/sentry-symfony ###
