--- a/docker/nginx_lb/nginx.conf
+++ b/docker/nginx_lb/nginx.conf
@@ -10,6 +10,8 @@ events {
 
 http {
     resolver 127.0.0.11;
+    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
 
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
