--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     networks:
       test_easyadmin:
         aliases:
-          - test_easyadmin.local
+          - easyadmin.test.local
 
 networks:
   test_easyadmin:
