--- a/docker/nginx_lb/sites-available/easyadmintest.conf
+++ b/docker/nginx_lb/sites-available/easyadmintest.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     listen 443 ssl http2;
 
-    server_name test_easyadmin.local www.test_easyadmin.local;
+    server_name easyadmin.test.local www.easyadmin.test.local;
     root /var/www/test_easyadmin/public;
     index index.php;
 
